# CppUTest-examples

./: .gitignore  CMakeLists.txt
include/: SomeLibrary.h
mocks/: CMakeLists.txt  HiddenStructComparator.cpp  HiddenStructComparator.h  HiddenStructCopier.cpp  HiddenStructCopier.h  MockSomeLibrary.cpp  MockSomeLibrary.h  SomeStructComparator.cpp  SomeStructCopier.cpp  SomeStructCopier.h  SomeStructInitParamsComparator.cpp  SomeStructInitParamsComparator.h
src/: CMakeLists.txt  MockThisLibrary.c  SomeLibrary.c
tests/: CMakeLists.txt
tests/Basic/: CMakeLists.txt  Test_Basic.cpp
tests/HiddenStructComparator/: CMakeLists.txt  Test_HiddenStructComparator.cpp  cut.txt
tests/HiddenStructCopier/: CMakeLists.txt  Test_HiddenStructCopier.cpp
tests/Mock/: CMakeLists.txt  RunAllTests.cpp  Test_Mock.cpp
tests/MockComparator/: AllTests.cpp  CMakeLists.txt  RunAllTests.cpp  SomeStructComparator.cpp  SomeStructComparator.h  Test_MockComparator.cpp  Test_SomeStructComparator.cpp
tests/MockCopier/: AllTests.cpp  CMakeLists.txt  RunAllTests.cpp  Test_MockCopier.cpp
tests/SomeStructComparator/: CMakeLists.txt
tests/SomeStructCopier/: CMakeLists.txt  Test_SomeStructCopier.cpp
tests/SomeStructInitParamsComparator/: CMakeLists.txt  Test_SomeStructInitParamsComparator.cpp
